Sistema gestor base con las bases de la app recibos

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,8 +21,8 @@
                 SISTEMA GESTION APPS
             </a>
             <div class="user-info">
-                <span class="user-name">Usuario: Demo</span>
-                <button class="btn-logout">Salir</button>
+                <span class="user-name">#######</span>
+                <button class="btn-logout">######</button>
             </div>
         </div>
     </header>
